--- a/alumni-client/index.html
+++ b/alumni-client/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./logo-mini.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>.connect</title>
+    <style>
+    body{
+      background-color: #f5f5f5;
+    }
+    </style>
   </head>
   <body>
     <div id="root"></div>
